RESOLVED FIXED33641
Assertion failure in Lexer.cpp if input stream ends while in string escape
https://bugs.webkit.org/show_bug.cgi?id=33641
Summary Assertion failure in Lexer.cpp if input stream ends while in string escape
Alexey Proskuryakov
Reported 2010-01-13 17:12:38 PST
The following script triggers an assertion: '\ Seems harmless in release mode.
Attachments
proposed fix (3.62 KB, patch)
2010-01-13 17:24 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-01-13 17:24:34 PST
Created attachment 46529 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-01-13 17:37:18 PST
Committed revision 53224.
Note You need to log in before you can comment on or make changes to this bug.