        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33641
        Assertion failure in Lexer.cpp if input stream ends while in string escape

        Test: fast/js/end-in-string-escape.html

        * parser/Lexer.cpp: (JSC::Lexer::lex): Bail out quickly on end of stream, not giving the
        assertion a chance to fire.



Canonical link: https://commits.webkit.org/44632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53224 268f45cc-cd09-0410-ab3c-d52691b4dbfc